examples/com.yakindu.solidity.examples/issues/80_contract_as_event.sol

contract Contract {
    
    event E(address a);

    function f(){
       
        Contract c = new Contract();
        
        E(c); // error: Incompatible Types    
         
        E(new Contract()); // OK   
    } 

} 